refactor AdminAnalyticsServiceImpl